// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`augmented report snapshots deterministic-only summary and markdown (no provider): markdown 1`] = `
"# AgentReady Augmented Analysis

- **Deterministic score:** 100
- **Augmented score:** 100 (no change)
- **Insights applied:** 0
- **Provider:** none (deterministic-only)"
`;

exports[`augmented report snapshots deterministic-only summary and markdown (no provider): summary 1`] = `
"AgentReady augmented analysis
Deterministic score: 100   Augmented score: 100 (no change)
Insights: none (deterministic-only — no provider configured or nothing to analyze)"
`;

exports[`augmented report snapshots summary and markdown with a folded insight: markdown 1`] = `
"# AgentReady Augmented Analysis

- **Deterministic score:** 100
- **Augmented score:** 96 (-4)
- **Insights applied:** 1
- **Provider:** snap

## Insights

| Kind | Target | Confidence | Verdict |
|---|---|---|---|
| quality | AGENTS.md | 80% | Instruction file is present but not actionable |

## Suggested remediation

- **analysis.instruction-quality:AGENTS.md** (\`AGENTS.md\`): Add the concrete validation commands and a brief orientation so an unfamiliar agent can set up, change, and verify.

## Score adjustments

| Δ | Insight |
|---|---|
| -4 | analysis.instruction-quality:AGENTS.md |"
`;

exports[`augmented report snapshots summary and markdown with a folded insight: summary 1`] = `
"AgentReady augmented analysis
Deterministic score: 100   Augmented score: 96 (-4)
Insights: 1 applied (provider: snap)

- (quality, 80%) [AGENTS.md] Instruction file is present but not actionable: too terse Missing: where code lives.
    → Add the concrete validation commands and a brief orientation so an unfamiliar agent can set up, change, and verify.

Score adjustments:
  -4  analysis.instruction-quality:AGENTS.md"
`;

exports[`diff output snapshots summary and markdown for a regression between two refs: diff compact json 1`] = `
"{
  "base": "HEAD~1",
  "head": "HEAD",
  "generatedAt": "<TIME>",
  "baseReport": {
    "root": "<WORKTREE>",
    "generatedAt": "<TIME>",
    "docs": {
      "readme": [
        "README.md"
      ],
      "contributing": [],
      "architecture": [],
      "environment": []
    },
    "commands": {
      "packageManager": "npm",
      "ecosystems": [
        "node"
      ],
      "scripts": [
        "lint",
        "test"
      ],
      "hasBuild": false,
      "hasTest": true,
      "hasLint": true,
      "hasTypeCheck": false
    },
    "ci": {
      "workflowFiles": [
        ".github/workflows/ci.yml"
      ],
      "workflows": [
        {
          "file": ".github/workflows/ci.yml",
          "name": "CI",
          "jobs": []
        }
      ],
      "hasInstall": false,
      "hasLint": false,
      "hasTypeCheck": false,
      "hasTest": false,
      "hasBuild": false,
      "orchestratorKinds": []
    },
    "instructions": [
      {
        "path": "AGENTS.md",
        "ecosystems": [
          "codex",
          "github-copilot",
          "cursor",
          "windsurf",
          "cline",
          "generic-agent"
        ],
        "scope": "root",
        "activation": "always",
        "sizeBytes": 14,
        "legacy": false,
        "localPrivate": false,
        "notes": [
          "Portable repository-level agent instruction entrypoint."
        ]
      }
    ],
    "capabilities": [],
    "safetySignals": [],
    "summary": {
      "score": 100,
      "totalFiles": 4,
      "totalBytes": 75,
      "sourceFiles": 0,
      "testFiles": 0,
      "documentationFiles": 2,
      "largeFiles": 0,
      "binaryFiles": 0,
      "generatedFiles": 0,
      "minifiedFiles": 0
    },
    "repositoryEvidence": {
      "roots": [
        {
          "id": "root:.",
          "kind": "repository-root",
          "rootKind": "package",
          "path": ".",
          "paths": [
            "."
          ],
          "languages": [
            "TypeScript"
          ],
          "manifests": [
            "package.json"
          ],
          "sourceFiles": 0,
          "testFiles": 0,
          "documentationFiles": 2,
          "generatedFiles": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "inference",
              "path": "AGENTS.md",
              "note": "conventional path"
            },
            {
              "detector": "repository-evidence",
              "kind": "manifest",
              "path": "package.json"
            },
            {
              "detector": "repository-evidence",
              "kind": "inference",
              "path": "README.md",
              "note": "conventional path"
            }
          ],
          "packageManager": "npm"
        }
      ],
      "boundaries": [],
      "documentSurfaces": [
        {
          "id": "document-surface:AGENTS.md",
          "kind": "document-surface",
          "path": "AGENTS.md",
          "paths": [
            "AGENTS.md"
          ],
          "headings": [],
          "linkedPaths": [],
          "commandBlocks": [],
          "roleClaims": [
            {
              "kind": "document-role",
              "value": "agent-instruction",
              "confidence": "high",
              "signals": [
                "instruction detector"
              ],
              "sources": [
                {
                  "detector": "repository-evidence",
                  "kind": "inference",
                  "path": "AGENTS.md"
                }
              ]
            }
          ],
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "AGENTS.md"
            }
          ]
        },
        {
          "id": "document-surface:README.md",
          "kind": "document-surface",
          "path": "README.md",
          "paths": [
            "README.md"
          ],
          "title": "Demo",
          "headings": [
            "Demo"
          ],
          "linkedPaths": [],
          "commandBlocks": [],
          "roleClaims": [
            {
              "kind": "document-role",
              "value": "entrypoint",
              "confidence": "medium",
              "signals": [
                "root README filename"
              ],
              "sources": [
                {
                  "detector": "repository-evidence",
                  "kind": "file",
                  "path": "README.md"
                }
              ]
            }
          ],
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "README.md"
            }
          ]
        }
      ],
      "verificationSurfaces": [
        {
          "id": "verification-surface:commands:lint",
          "kind": "verification-surface",
          "paths": [
            "package.json"
          ],
          "rootIds": [],
          "commandKind": "lint",
          "confidence": "low",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "manifest",
              "path": "package.json",
              "note": "repository-level command evidence; root coverage not inferred"
            }
          ]
        },
        {
          "id": "verification-surface:commands:test",
          "kind": "verification-surface",
          "paths": [
            "package.json"
          ],
          "rootIds": [],
          "commandKind": "test",
          "confidence": "low",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "manifest",
              "path": "package.json",
              "note": "repository-level command evidence; root coverage not inferred"
            }
          ]
        }
      ],
      "topology": {
        "dependencyHints": [],
        "testProximityHints": [],
        "documentationProximityHints": [],
        "generatedPressure": [
          {
            "id": "generated-pressure:root:.",
            "kind": "generated-pressure",
            "paths": [
              "."
            ],
            "rootId": "root:.",
            "generatedFileRatio": 0,
            "generatedBytesRatio": 0,
            "confidence": "high",
            "sources": [
              {
                "detector": "repository-evidence",
                "kind": "file",
                "path": "."
              }
            ]
          }
        ],
        "metrics": {
          "rootCount": 1,
          "languageCount": 1,
          "generatedFileRatio": 0,
          "largestRootShare": 0,
          "publicApiSurfaceCount": 0,
          "rootsWithoutLocalTests": 0,
          "rootsWithoutLocalDocs": 0,
          "verificationMappedRootCount": 0
        }
      }
    },
    "designState": {
      "strengths": [
        {
          "id": "design-state:documentation-evidence",
          "category": "documentation-evidence",
          "title": "Documentation role evidence found",
          "severity": "info",
          "summary": "2 document surface(s) have deterministic role evidence.",
          "evidenceIds": [
            "document-surface:AGENTS.md",
            "document-surface:README.md"
          ],
          "paths": [
            "AGENTS.md",
            "README.md"
          ],
          "confidence": "medium",
          "gateable": false
        },
        {
          "id": "design-state:verification-map",
          "category": "verification-locality",
          "title": "Verification surfaces detected",
          "severity": "info",
          "summary": "2 command or CI verification surface(s) were detected.",
          "evidenceIds": [
            "verification-surface:commands:lint",
            "verification-surface:commands:test"
          ],
          "paths": [
            "package.json"
          ],
          "confidence": "medium",
          "gateable": false
        }
      ],
      "risks": [],
      "ambiguities": []
    },
    "dimensions": [
      {
        "category": "docs",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "commands",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "ci",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "instructions",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "files",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "safety",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      }
    ],
    "reportContract": {
      "schemaVersion": "local-readiness/v2",
      "experimentalFields": [
        "repositoryEvidence",
        "designState",
        "dimensions"
      ]
    },
    "findings": []
  },
  "headReport": {
    "root": "<WORKTREE>",
    "generatedAt": "<TIME>",
    "docs": {
      "readme": [],
      "contributing": [],
      "architecture": [],
      "environment": []
    },
    "commands": {
      "packageManager": "npm",
      "ecosystems": [
        "node"
      ],
      "scripts": [
        "lint",
        "test"
      ],
      "hasBuild": false,
      "hasTest": true,
      "hasLint": true,
      "hasTypeCheck": false
    },
    "ci": {
      "workflowFiles": [
        ".github/workflows/ci.yml"
      ],
      "workflows": [
        {
          "file": ".github/workflows/ci.yml",
          "name": "CI",
          "jobs": []
        }
      ],
      "hasInstall": false,
      "hasLint": false,
      "hasTypeCheck": false,
      "hasTest": false,
      "hasBuild": false,
      "orchestratorKinds": []
    },
    "instructions": [
      {
        "path": "AGENTS.md",
        "ecosystems": [
          "codex",
          "github-copilot",
          "cursor",
          "windsurf",
          "cline",
          "generic-agent"
        ],
        "scope": "root",
        "activation": "always",
        "sizeBytes": 14,
        "legacy": false,
        "localPrivate": false,
        "notes": [
          "Portable repository-level agent instruction entrypoint."
        ]
      }
    ],
    "capabilities": [],
    "safetySignals": [],
    "summary": {
      "score": 82,
      "totalFiles": 3,
      "totalBytes": 68,
      "sourceFiles": 0,
      "testFiles": 0,
      "documentationFiles": 1,
      "largeFiles": 0,
      "binaryFiles": 0,
      "generatedFiles": 0,
      "minifiedFiles": 0
    },
    "repositoryEvidence": {
      "roots": [
        {
          "id": "root:.",
          "kind": "repository-root",
          "rootKind": "package",
          "path": ".",
          "paths": [
            "."
          ],
          "languages": [
            "TypeScript"
          ],
          "manifests": [
            "package.json"
          ],
          "sourceFiles": 0,
          "testFiles": 0,
          "documentationFiles": 1,
          "generatedFiles": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "inference",
              "path": "AGENTS.md",
              "note": "conventional path"
            },
            {
              "detector": "repository-evidence",
              "kind": "manifest",
              "path": "package.json"
            }
          ],
          "packageManager": "npm"
        }
      ],
      "boundaries": [],
      "documentSurfaces": [
        {
          "id": "document-surface:AGENTS.md",
          "kind": "document-surface",
          "path": "AGENTS.md",
          "paths": [
            "AGENTS.md"
          ],
          "headings": [],
          "linkedPaths": [],
          "commandBlocks": [],
          "roleClaims": [
            {
              "kind": "document-role",
              "value": "agent-instruction",
              "confidence": "high",
              "signals": [
                "instruction detector"
              ],
              "sources": [
                {
                  "detector": "repository-evidence",
                  "kind": "inference",
                  "path": "AGENTS.md"
                }
              ]
            }
          ],
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "AGENTS.md"
            }
          ]
        }
      ],
      "verificationSurfaces": [
        {
          "id": "verification-surface:commands:lint",
          "kind": "verification-surface",
          "paths": [
            "package.json"
          ],
          "rootIds": [],
          "commandKind": "lint",
          "confidence": "low",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "manifest",
              "path": "package.json",
              "note": "repository-level command evidence; root coverage not inferred"
            }
          ]
        },
        {
          "id": "verification-surface:commands:test",
          "kind": "verification-surface",
          "paths": [
            "package.json"
          ],
          "rootIds": [],
          "commandKind": "test",
          "confidence": "low",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "manifest",
              "path": "package.json",
              "note": "repository-level command evidence; root coverage not inferred"
            }
          ]
        }
      ],
      "topology": {
        "dependencyHints": [],
        "testProximityHints": [],
        "documentationProximityHints": [],
        "generatedPressure": [
          {
            "id": "generated-pressure:root:.",
            "kind": "generated-pressure",
            "paths": [
              "."
            ],
            "rootId": "root:.",
            "generatedFileRatio": 0,
            "generatedBytesRatio": 0,
            "confidence": "high",
            "sources": [
              {
                "detector": "repository-evidence",
                "kind": "file",
                "path": "."
              }
            ]
          }
        ],
        "metrics": {
          "rootCount": 1,
          "languageCount": 1,
          "generatedFileRatio": 0,
          "largestRootShare": 0,
          "publicApiSurfaceCount": 0,
          "rootsWithoutLocalTests": 0,
          "rootsWithoutLocalDocs": 0,
          "verificationMappedRootCount": 0
        }
      }
    },
    "designState": {
      "strengths": [
        {
          "id": "design-state:documentation-evidence",
          "category": "documentation-evidence",
          "title": "Documentation role evidence found",
          "severity": "info",
          "summary": "1 document surface(s) have deterministic role evidence.",
          "evidenceIds": [
            "document-surface:AGENTS.md"
          ],
          "paths": [
            "AGENTS.md"
          ],
          "confidence": "medium",
          "gateable": false
        },
        {
          "id": "design-state:verification-map",
          "category": "verification-locality",
          "title": "Verification surfaces detected",
          "severity": "info",
          "summary": "2 command or CI verification surface(s) were detected.",
          "evidenceIds": [
            "verification-surface:commands:lint",
            "verification-surface:commands:test"
          ],
          "paths": [
            "package.json"
          ],
          "confidence": "medium",
          "gateable": false
        }
      ],
      "risks": [],
      "ambiguities": []
    },
    "dimensions": [
      {
        "category": "docs",
        "score": 82,
        "findingCount": 1,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 1
        }
      },
      {
        "category": "commands",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "ci",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "instructions",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "files",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      },
      {
        "category": "safety",
        "score": 100,
        "findingCount": 0,
        "bySeverity": {
          "info": 0,
          "warning": 0,
          "error": 0
        }
      }
    ],
    "reportContract": {
      "schemaVersion": "local-readiness/v2",
      "experimentalFields": [
        "repositoryEvidence",
        "designState",
        "dimensions"
      ]
    },
    "findings": [
      {
        "id": "docs.readme.missing",
        "title": "Repository has no README",
        "severity": "error",
        "recommendation": "Add a root README with purpose, setup, validation commands, and common agent entrypoints."
      }
    ]
  },
  "summary": {
    "scoreDelta": -18,
    "filesDelta": -1,
    "bytesDelta": -7,
    "findingsDelta": 1,
    "newFindings": 1,
    "resolvedFindings": 0
  },
  "newFindings": [
    {
      "id": "docs.readme.missing",
      "title": "Repository has no README",
      "severity": "error",
      "recommendation": "Add a root README with purpose, setup, validation commands, and common agent entrypoints."
    }
  ],
  "resolvedFindings": [],
  "regressions": [
    {
      "id": "docs.readme.missing",
      "title": "Repository has no README",
      "severity": "error",
      "recommendation": "Add a root README with purpose, setup, validation commands, and common agent entrypoints."
    }
  ]
}"
`;

exports[`diff output snapshots summary and markdown for a regression between two refs: diff markdown 1`] = `
"## AgentReady PR readiness

⚠️ 1 regression(s), 1 new finding(s).

Base/head: \`HEAD~1\` .. \`HEAD\`
Score delta: **-18**
New findings: 1; resolved findings: 0
Regression findings: 1

### New regressions
- **ERROR**: Repository has no README. Add a root README with purpose, setup, validation commands, and common agent entrypoints.

### Recommendations
- **ERROR**: Repository has no README. Add a root README with purpose, setup, validation commands, and common agent entrypoints."
`;

exports[`diff output snapshots summary and markdown for a regression between two refs: diff summary 1`] = `
"AgentReady diff: HEAD~1..HEAD
Score delta: -18
New findings: 1, resolved: 0
- [error] Repository has no README"
`;

exports[`scan output snapshots bad-repo compact json 1`] = `
"{
  "root": "<ROOT>",
  "generatedAt": "<TIME>",
  "docs": {
    "readme": [],
    "contributing": [],
    "architecture": [],
    "environment": []
  },
  "commands": {
    "packageManager": "npm",
    "ecosystems": [
      "node"
    ],
    "scripts": [
      "build"
    ],
    "hasBuild": true,
    "hasTest": false,
    "hasLint": false,
    "hasTypeCheck": false
  },
  "ci": {
    "workflowFiles": [],
    "workflows": [],
    "hasInstall": false,
    "hasLint": false,
    "hasTypeCheck": false,
    "hasTest": false,
    "hasBuild": false,
    "orchestratorKinds": []
  },
  "instructions": [],
  "capabilities": [],
  "safetySignals": [],
  "summary": {
    "score": 36,
    "totalFiles": 2,
    "totalBytes": 77,
    "sourceFiles": 1,
    "testFiles": 0,
    "documentationFiles": 0,
    "largeFiles": 0,
    "binaryFiles": 0,
    "generatedFiles": 0,
    "minifiedFiles": 0
  },
  "repositoryEvidence": {
    "roots": [
      {
        "id": "root:.",
        "kind": "repository-root",
        "rootKind": "package",
        "path": ".",
        "paths": [
          "."
        ],
        "languages": [
          "TypeScript"
        ],
        "manifests": [
          "package.json"
        ],
        "sourceFiles": 0,
        "testFiles": 0,
        "documentationFiles": 0,
        "generatedFiles": 0,
        "confidence": "high",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "manifest",
            "path": "package.json"
          }
        ],
        "packageManager": "npm"
      },
      {
        "id": "root:src",
        "kind": "repository-root",
        "rootKind": "unknown",
        "path": "src",
        "paths": [
          "src"
        ],
        "languages": [
          "TypeScript"
        ],
        "manifests": [],
        "sourceFiles": 1,
        "testFiles": 0,
        "documentationFiles": 0,
        "generatedFiles": 0,
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "src/index.ts",
            "note": "conventional path"
          }
        ]
      }
    ],
    "boundaries": [
      {
        "id": "architecture-boundary:src/index.ts",
        "kind": "architecture-boundary",
        "path": "src/index.ts",
        "paths": [
          "src/index.ts"
        ],
        "role": "entrypoint",
        "signals": [
          "entrypoint path signal"
        ],
        "confidence": "high",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "src/index.ts"
          }
        ]
      }
    ],
    "documentSurfaces": [],
    "verificationSurfaces": [
      {
        "id": "verification-surface:commands:build",
        "kind": "verification-surface",
        "paths": [
          "package.json"
        ],
        "rootIds": [],
        "commandKind": "build",
        "confidence": "low",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "manifest",
            "path": "package.json",
            "note": "repository-level command evidence; root coverage not inferred"
          }
        ]
      }
    ],
    "topology": {
      "dependencyHints": [],
      "testProximityHints": [
        {
          "id": "test-proximity:root:src",
          "kind": "test-proximity-hint",
          "paths": [
            "src"
          ],
          "rootId": "root:src",
          "nearbyTestPaths": [],
          "confidence": "medium",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "inference",
              "path": "src",
              "note": "path proximity"
            }
          ]
        }
      ],
      "documentationProximityHints": [
        {
          "id": "documentation-proximity:root:src",
          "kind": "documentation-proximity-hint",
          "paths": [
            "src"
          ],
          "rootId": "root:src",
          "documentSurfaceIds": [],
          "roleClaims": [],
          "confidence": "low",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "inference",
              "path": "src",
              "note": "path proximity"
            }
          ]
        }
      ],
      "generatedPressure": [
        {
          "id": "generated-pressure:root:.",
          "kind": "generated-pressure",
          "paths": [
            "."
          ],
          "rootId": "root:.",
          "generatedFileRatio": 0,
          "generatedBytesRatio": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "."
            }
          ]
        },
        {
          "id": "generated-pressure:root:src",
          "kind": "generated-pressure",
          "paths": [
            "src"
          ],
          "rootId": "root:src",
          "generatedFileRatio": 0,
          "generatedBytesRatio": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "src"
            }
          ]
        }
      ],
      "metrics": {
        "rootCount": 2,
        "languageCount": 1,
        "sourceToNearbyTestRatio": 0,
        "docsToSourceProximityRatio": 0,
        "generatedFileRatio": 0,
        "largestRootShare": 1,
        "publicApiSurfaceCount": 0,
        "rootsWithoutLocalTests": 1,
        "rootsWithoutLocalDocs": 1,
        "verificationMappedRootCount": 0
      }
    }
  },
  "designState": {
    "strengths": [
      {
        "id": "design-state:verification-map",
        "category": "verification-locality",
        "title": "Verification surfaces detected",
        "severity": "info",
        "summary": "1 command or CI verification surface(s) were detected.",
        "evidenceIds": [
          "verification-surface:commands:build"
        ],
        "paths": [
          "package.json"
        ],
        "confidence": "medium",
        "gateable": false
      }
    ],
    "risks": [
      {
        "id": "design-state:verification-locality:unmapped-tests",
        "category": "verification-locality",
        "title": "Some source roots have no nearby tests",
        "severity": "info",
        "summary": "1 source root(s) have no path-local test evidence.",
        "evidenceIds": [
          "test-proximity:root:src"
        ],
        "paths": [
          "src"
        ],
        "confidence": "medium",
        "recommendation": "Add local tests or document the verification command that covers these roots.",
        "gateable": false
      }
    ],
    "ambiguities": [
      {
        "id": "design-state:documentation-proximity:unmapped-docs",
        "category": "documentation-evidence",
        "title": "Some source roots have no nearby documentation",
        "severity": "info",
        "summary": "1 source root(s) have no path-local document role evidence.",
        "evidenceIds": [
          "documentation-proximity:root:src"
        ],
        "paths": [
          "src"
        ],
        "confidence": "low",
        "recommendation": "Link architecture, development, or API docs to the affected roots.",
        "gateable": false
      }
    ]
  },
  "dimensions": [
    {
      "category": "docs",
      "score": 82,
      "findingCount": 1,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 1
      }
    },
    {
      "category": "commands",
      "score": 68,
      "findingCount": 3,
      "bySeverity": {
        "info": 0,
        "warning": 2,
        "error": 1
      }
    },
    {
      "category": "ci",
      "score": 93,
      "findingCount": 1,
      "bySeverity": {
        "info": 0,
        "warning": 1,
        "error": 0
      }
    },
    {
      "category": "instructions",
      "score": 93,
      "findingCount": 1,
      "bySeverity": {
        "info": 0,
        "warning": 1,
        "error": 0
      }
    },
    {
      "category": "files",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    },
    {
      "category": "safety",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    }
  ],
  "reportContract": {
    "schemaVersion": "local-readiness/v2",
    "experimentalFields": [
      "repositoryEvidence",
      "designState",
      "dimensions"
    ]
  },
  "findings": [
    {
      "id": "ci.workflow.missing",
      "title": "No CI workflow detected",
      "severity": "warning",
      "recommendation": "Add CI that runs install, lint, type-check, tests, and build where applicable."
    },
    {
      "id": "commands.lint.missing",
      "title": "No lint command detected",
      "severity": "warning",
      "recommendation": "Expose a lint command so agents can catch style and static analysis regressions before review."
    },
    {
      "id": "commands.test.missing",
      "title": "No test command detected",
      "severity": "error",
      "recommendation": "Expose a stable test command in package scripts or documented project tooling."
    },
    {
      "id": "commands.typecheck.missing",
      "title": "TypeScript repository has no type-check command",
      "severity": "warning",
      "recommendation": "Expose a type-check command and run it in CI."
    },
    {
      "id": "docs.readme.missing",
      "title": "Repository has no README",
      "severity": "error",
      "recommendation": "Add a root README with purpose, setup, validation commands, and common agent entrypoints."
    },
    {
      "id": "instructions.missing",
      "title": "No agent instruction surface detected",
      "severity": "warning",
      "recommendation": "Add AGENTS.md or the relevant agent-specific instruction file with repo conventions and validation commands."
    }
  ]
}"
`;

exports[`scan output snapshots bad-repo console summary 1`] = `
"AgentReady score: 36/100
Files: 2 (1 source, 0 tests, 0 docs)
Capabilities: 0, safety signals: 0
CI: no workflows detected
Dimensions: docs 82, commands 68, ci 93, instructions 93, files 100, safety 100
Findings: 6
- [warning] No CI workflow detected
- [warning] No lint command detected
- [error] No test command detected
- [warning] TypeScript repository has no type-check command
- [error] Repository has no README
- [warning] No agent instruction surface detected"
`;

exports[`scan output snapshots bad-repo markdown 1`] = `
"## AgentReady scan

Score: **36/100**
Files: 2 total, 1 source, 0 tests, 0 docs
Capabilities: 0; safety signals: 0
CI: no workflows detected
Findings: 6

### Dimension scores
- docs: **82/100** (1 error, 0 warning, 0 info)
- commands: **68/100** (1 error, 2 warning, 0 info)
- ci: **93/100** (0 error, 1 warning, 0 info)
- instructions: **93/100** (0 error, 1 warning, 0 info)
- files: **100/100** (no findings)
- safety: **100/100** (no findings)

### Repository topology
Roots: 2; languages: 1; roots without local tests: 1; roots without local docs: 1
- \`.\`: package, TypeScript, 0 source, 0 tests, 0 docs
- \`src\`: unknown, TypeScript, 1 source, 0 tests, 0 docs

### Design-state strengths
- **INFO** verification-locality: 1 command or CI verification surface(s) were detected. Paths: \`package.json\`.

### Design-state risks
- **INFO** verification-locality: 1 source root(s) have no path-local test evidence. Paths: \`src\`.

### Design-state ambiguities
- **INFO** documentation-evidence: 1 source root(s) have no path-local document role evidence. Paths: \`src\`.

### Findings
- **WARNING**: No CI workflow detected. Add CI that runs install, lint, type-check, tests, and build where applicable.
- **WARNING**: No lint command detected. Expose a lint command so agents can catch style and static analysis regressions before review.
- **ERROR**: No test command detected. Expose a stable test command in package scripts or documented project tooling.
- **WARNING**: TypeScript repository has no type-check command. Expose a type-check command and run it in CI.
- **ERROR**: Repository has no README. Add a root README with purpose, setup, validation commands, and common agent entrypoints.
- **WARNING**: No agent instruction surface detected. Add AGENTS.md or the relevant agent-specific instruction file with repo conventions and validation commands."
`;

exports[`scan output snapshots bad-repo sarif 1`] = `
"{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "AgentReady",
          "informationUri": "https://github.com/napetrov/agentready",
          "rules": [
            {
              "id": "ci.workflow.missing",
              "name": "ci.workflow.missing",
              "shortDescription": {
                "text": "No CI workflow detected"
              },
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "commands.lint.missing",
              "name": "commands.lint.missing",
              "shortDescription": {
                "text": "No lint command detected"
              },
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "commands.test.missing",
              "name": "commands.test.missing",
              "shortDescription": {
                "text": "No test command detected"
              },
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "commands.typecheck.missing",
              "name": "commands.typecheck.missing",
              "shortDescription": {
                "text": "TypeScript repository has no type-check command"
              },
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "docs.readme.missing",
              "name": "docs.readme.missing",
              "shortDescription": {
                "text": "Repository has no README"
              },
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "instructions.missing",
              "name": "instructions.missing",
              "shortDescription": {
                "text": "No agent instruction surface detected"
              },
              "defaultConfiguration": {
                "level": "warning"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "ci.workflow.missing",
          "level": "warning",
          "message": {
            "text": "No CI workflow detected. Add CI that runs install, lint, type-check, tests, and build where applicable."
          }
        },
        {
          "ruleId": "commands.lint.missing",
          "level": "warning",
          "message": {
            "text": "No lint command detected. Expose a lint command so agents can catch style and static analysis regressions before review."
          }
        },
        {
          "ruleId": "commands.test.missing",
          "level": "error",
          "message": {
            "text": "No test command detected. Expose a stable test command in package scripts or documented project tooling."
          }
        },
        {
          "ruleId": "commands.typecheck.missing",
          "level": "warning",
          "message": {
            "text": "TypeScript repository has no type-check command. Expose a type-check command and run it in CI."
          }
        },
        {
          "ruleId": "docs.readme.missing",
          "level": "error",
          "message": {
            "text": "Repository has no README. Add a root README with purpose, setup, validation commands, and common agent entrypoints."
          }
        },
        {
          "ruleId": "instructions.missing",
          "level": "warning",
          "message": {
            "text": "No agent instruction surface detected. Add AGENTS.md or the relevant agent-specific instruction file with repo conventions and validation commands."
          }
        }
      ]
    }
  ]
}"
`;

exports[`scan output snapshots good-repo compact json 1`] = `
"{
  "root": "<ROOT>",
  "generatedAt": "<TIME>",
  "docs": {
    "readme": [
      "README.md"
    ],
    "contributing": [],
    "architecture": [
      "docs/ARCHITECTURE.md"
    ],
    "environment": []
  },
  "commands": {
    "packageManager": "npm",
    "ecosystems": [
      "node"
    ],
    "scripts": [
      "build",
      "lint",
      "test",
      "type-check"
    ],
    "hasBuild": true,
    "hasTest": true,
    "hasLint": true,
    "hasTypeCheck": true
  },
  "ci": {
    "workflowFiles": [
      ".github/workflows/ci.yml"
    ],
    "workflows": [
      {
        "file": ".github/workflows/ci.yml",
        "name": "CI",
        "jobs": [
          {
            "id": "verify",
            "commandKinds": [
              "install",
              "lint",
              "typecheck",
              "test",
              "build"
            ],
            "concreteKinds": [
              "install",
              "lint",
              "typecheck",
              "test",
              "build"
            ]
          }
        ]
      }
    ],
    "hasInstall": true,
    "hasLint": true,
    "hasTypeCheck": true,
    "hasTest": true,
    "hasBuild": true,
    "orchestratorKinds": []
  },
  "instructions": [
    {
      "path": "AGENTS.md",
      "ecosystems": [
        "codex",
        "github-copilot",
        "cursor",
        "windsurf",
        "cline",
        "generic-agent"
      ],
      "scope": "root",
      "activation": "always",
      "sizeBytes": 105,
      "legacy": false,
      "localPrivate": false,
      "notes": [
        "Portable repository-level agent instruction entrypoint."
      ]
    }
  ],
  "capabilities": [],
  "safetySignals": [],
  "summary": {
    "score": 100,
    "totalFiles": 7,
    "totalBytes": 913,
    "sourceFiles": 1,
    "testFiles": 1,
    "documentationFiles": 3,
    "largeFiles": 0,
    "binaryFiles": 0,
    "generatedFiles": 0,
    "minifiedFiles": 0
  },
  "repositoryEvidence": {
    "roots": [
      {
        "id": "root:__tests__",
        "kind": "repository-root",
        "rootKind": "test",
        "path": "__tests__",
        "paths": [
          "__tests__"
        ],
        "languages": [
          "TypeScript"
        ],
        "manifests": [],
        "sourceFiles": 0,
        "testFiles": 1,
        "documentationFiles": 0,
        "generatedFiles": 0,
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "__tests__/index.test.ts",
            "note": "conventional path"
          }
        ]
      },
      {
        "id": "root:.",
        "kind": "repository-root",
        "rootKind": "package",
        "path": ".",
        "paths": [
          "."
        ],
        "languages": [
          "TypeScript"
        ],
        "manifests": [
          "package.json"
        ],
        "sourceFiles": 0,
        "testFiles": 0,
        "documentationFiles": 2,
        "generatedFiles": 0,
        "confidence": "high",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "AGENTS.md",
            "note": "conventional path"
          },
          {
            "detector": "repository-evidence",
            "kind": "manifest",
            "path": "package.json"
          },
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "README.md",
            "note": "conventional path"
          }
        ],
        "packageManager": "npm"
      },
      {
        "id": "root:docs",
        "kind": "repository-root",
        "rootKind": "docs",
        "path": "docs",
        "paths": [
          "docs"
        ],
        "languages": [],
        "manifests": [],
        "sourceFiles": 0,
        "testFiles": 0,
        "documentationFiles": 1,
        "generatedFiles": 0,
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "docs/ARCHITECTURE.md",
            "note": "conventional path"
          }
        ]
      },
      {
        "id": "root:src",
        "kind": "repository-root",
        "rootKind": "unknown",
        "path": "src",
        "paths": [
          "src"
        ],
        "languages": [
          "TypeScript"
        ],
        "manifests": [],
        "sourceFiles": 1,
        "testFiles": 0,
        "documentationFiles": 0,
        "generatedFiles": 0,
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "src/index.ts",
            "note": "conventional path"
          }
        ]
      }
    ],
    "boundaries": [
      {
        "id": "architecture-boundary:__tests__/index.test.ts",
        "kind": "architecture-boundary",
        "path": "__tests__/index.test.ts",
        "paths": [
          "__tests__/index.test.ts"
        ],
        "role": "test-support",
        "signals": [
          "test-support path signal"
        ],
        "confidence": "high",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "__tests__/index.test.ts"
          }
        ]
      },
      {
        "id": "architecture-boundary:src/index.ts",
        "kind": "architecture-boundary",
        "path": "src/index.ts",
        "paths": [
          "src/index.ts"
        ],
        "role": "entrypoint",
        "signals": [
          "entrypoint path signal"
        ],
        "confidence": "high",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "inference",
            "path": "src/index.ts"
          }
        ]
      }
    ],
    "documentSurfaces": [
      {
        "id": "document-surface:AGENTS.md",
        "kind": "document-surface",
        "path": "AGENTS.md",
        "paths": [
          "AGENTS.md"
        ],
        "title": "Agent Instructions",
        "headings": [
          "Agent Instructions"
        ],
        "linkedPaths": [],
        "commandBlocks": [],
        "roleClaims": [
          {
            "kind": "document-role",
            "value": "agent-instruction",
            "confidence": "high",
            "signals": [
              "instruction detector"
            ],
            "sources": [
              {
                "detector": "repository-evidence",
                "kind": "inference",
                "path": "AGENTS.md"
              }
            ]
          }
        ],
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "file",
            "path": "AGENTS.md"
          }
        ]
      },
      {
        "id": "document-surface:docs/ARCHITECTURE.md",
        "kind": "document-surface",
        "path": "docs/ARCHITECTURE.md",
        "paths": [
          "docs/ARCHITECTURE.md"
        ],
        "title": "Architecture",
        "headings": [
          "Architecture"
        ],
        "linkedPaths": [],
        "commandBlocks": [],
        "roleClaims": [
          {
            "kind": "document-role",
            "value": "architecture",
            "confidence": "high",
            "signals": [
              "architecture path"
            ],
            "sources": [
              {
                "detector": "repository-evidence",
                "kind": "file",
                "path": "docs/ARCHITECTURE.md"
              }
            ]
          }
        ],
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "file",
            "path": "docs/ARCHITECTURE.md"
          }
        ]
      },
      {
        "id": "document-surface:README.md",
        "kind": "document-surface",
        "path": "README.md",
        "paths": [
          "README.md"
        ],
        "title": "Good Fixture",
        "headings": [
          "Good Fixture"
        ],
        "linkedPaths": [],
        "commandBlocks": [
          {
            "index": 0,
            "language": "bash",
            "text": "npm test\\nnpm run lint\\nnpm run type-check\\n",
            "truncated": false
          }
        ],
        "roleClaims": [
          {
            "kind": "document-role",
            "value": "development",
            "confidence": "low",
            "signals": [
              "setup or command block"
            ],
            "sources": [
              {
                "detector": "repository-evidence",
                "kind": "inference",
                "path": "README.md"
              }
            ]
          },
          {
            "kind": "document-role",
            "value": "entrypoint",
            "confidence": "high",
            "signals": [
              "root README filename"
            ],
            "sources": [
              {
                "detector": "repository-evidence",
                "kind": "file",
                "path": "README.md"
              }
            ]
          }
        ],
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "file",
            "path": "README.md"
          }
        ]
      }
    ],
    "verificationSurfaces": [
      {
        "id": "verification-surface:.github/workflows/ci.yml:job.verify:build",
        "kind": "verification-surface",
        "paths": [
          ".github/workflows/ci.yml"
        ],
        "rootIds": [],
        "commandKind": "build",
        "workflowJobId": "verify",
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "workflow",
            "path": ".github/workflows/ci.yml"
          }
        ]
      },
      {
        "id": "verification-surface:.github/workflows/ci.yml:job.verify:install",
        "kind": "verification-surface",
        "paths": [
          ".github/workflows/ci.yml"
        ],
        "rootIds": [],
        "commandKind": "install",
        "workflowJobId": "verify",
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "workflow",
            "path": ".github/workflows/ci.yml"
          }
        ]
      },
      {
        "id": "verification-surface:.github/workflows/ci.yml:job.verify:lint",
        "kind": "verification-surface",
        "paths": [
          ".github/workflows/ci.yml"
        ],
        "rootIds": [],
        "commandKind": "lint",
        "workflowJobId": "verify",
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "workflow",
            "path": ".github/workflows/ci.yml"
          }
        ]
      },
      {
        "id": "verification-surface:.github/workflows/ci.yml:job.verify:test",
        "kind": "verification-surface",
        "paths": [
          ".github/workflows/ci.yml"
        ],
        "rootIds": [],
        "commandKind": "test",
        "workflowJobId": "verify",
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "workflow",
            "path": ".github/workflows/ci.yml"
          }
        ]
      },
      {
        "id": "verification-surface:.github/workflows/ci.yml:job.verify:typecheck",
        "kind": "verification-surface",
        "paths": [
          ".github/workflows/ci.yml"
        ],
        "rootIds": [],
        "commandKind": "typecheck",
        "workflowJobId": "verify",
        "confidence": "medium",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "workflow",
            "path": ".github/workflows/ci.yml"
          }
        ]
      },
      {
        "id": "verification-surface:commands:build",
        "kind": "verification-surface",
        "paths": [
          "package.json"
        ],
        "rootIds": [],
        "commandKind": "build",
        "confidence": "low",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "manifest",
            "path": "package.json",
            "note": "repository-level command evidence; root coverage not inferred"
          }
        ]
      },
      {
        "id": "verification-surface:commands:lint",
        "kind": "verification-surface",
        "paths": [
          "package.json"
        ],
        "rootIds": [],
        "commandKind": "lint",
        "confidence": "low",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "manifest",
            "path": "package.json",
            "note": "repository-level command evidence; root coverage not inferred"
          }
        ]
      },
      {
        "id": "verification-surface:commands:test",
        "kind": "verification-surface",
        "paths": [
          "package.json"
        ],
        "rootIds": [],
        "commandKind": "test",
        "confidence": "low",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "manifest",
            "path": "package.json",
            "note": "repository-level command evidence; root coverage not inferred"
          }
        ]
      },
      {
        "id": "verification-surface:commands:typecheck",
        "kind": "verification-surface",
        "paths": [
          "package.json"
        ],
        "rootIds": [],
        "commandKind": "typecheck",
        "confidence": "low",
        "sources": [
          {
            "detector": "repository-evidence",
            "kind": "manifest",
            "path": "package.json",
            "note": "repository-level command evidence; root coverage not inferred"
          }
        ]
      }
    ],
    "topology": {
      "dependencyHints": [],
      "testProximityHints": [
        {
          "id": "test-proximity:root:src",
          "kind": "test-proximity-hint",
          "paths": [
            "src"
          ],
          "rootId": "root:src",
          "nearbyTestPaths": [],
          "confidence": "medium",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "inference",
              "path": "src",
              "note": "path proximity"
            }
          ]
        }
      ],
      "documentationProximityHints": [
        {
          "id": "documentation-proximity:root:src",
          "kind": "documentation-proximity-hint",
          "paths": [
            "src"
          ],
          "rootId": "root:src",
          "documentSurfaceIds": [],
          "roleClaims": [],
          "confidence": "low",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "inference",
              "path": "src",
              "note": "path proximity"
            }
          ]
        }
      ],
      "generatedPressure": [
        {
          "id": "generated-pressure:root:__tests__",
          "kind": "generated-pressure",
          "paths": [
            "__tests__"
          ],
          "rootId": "root:__tests__",
          "generatedFileRatio": 0,
          "generatedBytesRatio": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "__tests__"
            }
          ]
        },
        {
          "id": "generated-pressure:root:.",
          "kind": "generated-pressure",
          "paths": [
            "."
          ],
          "rootId": "root:.",
          "generatedFileRatio": 0,
          "generatedBytesRatio": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "."
            }
          ]
        },
        {
          "id": "generated-pressure:root:docs",
          "kind": "generated-pressure",
          "paths": [
            "docs"
          ],
          "rootId": "root:docs",
          "generatedFileRatio": 0,
          "generatedBytesRatio": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "docs"
            }
          ]
        },
        {
          "id": "generated-pressure:root:src",
          "kind": "generated-pressure",
          "paths": [
            "src"
          ],
          "rootId": "root:src",
          "generatedFileRatio": 0,
          "generatedBytesRatio": 0,
          "confidence": "high",
          "sources": [
            {
              "detector": "repository-evidence",
              "kind": "file",
              "path": "src"
            }
          ]
        }
      ],
      "metrics": {
        "rootCount": 4,
        "languageCount": 1,
        "sourceToNearbyTestRatio": 0,
        "docsToSourceProximityRatio": 0,
        "generatedFileRatio": 0,
        "largestRootShare": 1,
        "publicApiSurfaceCount": 0,
        "rootsWithoutLocalTests": 1,
        "rootsWithoutLocalDocs": 1,
        "verificationMappedRootCount": 0
      }
    }
  },
  "designState": {
    "strengths": [
      {
        "id": "design-state:documentation-evidence",
        "category": "documentation-evidence",
        "title": "Documentation role evidence found",
        "severity": "info",
        "summary": "3 document surface(s) have deterministic role evidence.",
        "evidenceIds": [
          "document-surface:AGENTS.md",
          "document-surface:docs/ARCHITECTURE.md",
          "document-surface:README.md"
        ],
        "paths": [
          "AGENTS.md",
          "README.md",
          "docs/ARCHITECTURE.md"
        ],
        "confidence": "medium",
        "gateable": false
      },
      {
        "id": "design-state:verification-map",
        "category": "verification-locality",
        "title": "Verification surfaces detected",
        "severity": "info",
        "summary": "9 command or CI verification surface(s) were detected.",
        "evidenceIds": [
          "verification-surface:.github/workflows/ci.yml:job.verify:build",
          "verification-surface:.github/workflows/ci.yml:job.verify:install",
          "verification-surface:.github/workflows/ci.yml:job.verify:lint",
          "verification-surface:.github/workflows/ci.yml:job.verify:test",
          "verification-surface:.github/workflows/ci.yml:job.verify:typecheck",
          "verification-surface:commands:build",
          "verification-surface:commands:lint",
          "verification-surface:commands:test",
          "verification-surface:commands:typecheck"
        ],
        "paths": [
          ".github/workflows/ci.yml",
          "package.json"
        ],
        "confidence": "medium",
        "gateable": false
      }
    ],
    "risks": [
      {
        "id": "design-state:verification-locality:unmapped-tests",
        "category": "verification-locality",
        "title": "Some source roots have no nearby tests",
        "severity": "info",
        "summary": "1 source root(s) have no path-local test evidence.",
        "evidenceIds": [
          "test-proximity:root:src"
        ],
        "paths": [
          "src"
        ],
        "confidence": "medium",
        "recommendation": "Add local tests or document the verification command that covers these roots.",
        "gateable": false
      }
    ],
    "ambiguities": [
      {
        "id": "design-state:documentation-proximity:unmapped-docs",
        "category": "documentation-evidence",
        "title": "Some source roots have no nearby documentation",
        "severity": "info",
        "summary": "1 source root(s) have no path-local document role evidence.",
        "evidenceIds": [
          "documentation-proximity:root:src"
        ],
        "paths": [
          "src"
        ],
        "confidence": "low",
        "recommendation": "Link architecture, development, or API docs to the affected roots.",
        "gateable": false
      }
    ]
  },
  "dimensions": [
    {
      "category": "docs",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    },
    {
      "category": "commands",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    },
    {
      "category": "ci",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    },
    {
      "category": "instructions",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    },
    {
      "category": "files",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    },
    {
      "category": "safety",
      "score": 100,
      "findingCount": 0,
      "bySeverity": {
        "info": 0,
        "warning": 0,
        "error": 0
      }
    }
  ],
  "reportContract": {
    "schemaVersion": "local-readiness/v2",
    "experimentalFields": [
      "repositoryEvidence",
      "designState",
      "dimensions"
    ]
  },
  "findings": []
}"
`;

exports[`scan output snapshots good-repo console summary 1`] = `
"AgentReady score: 100/100
Files: 7 (1 source, 1 tests, 3 docs)
Capabilities: 0, safety signals: 0
CI: 1 workflow (runs install, lint, type-check, test, build)
Dimensions: docs 100, commands 100, ci 100, instructions 100, files 100, safety 100
Findings: 0"
`;

exports[`scan output snapshots good-repo markdown 1`] = `
"## AgentReady scan

Score: **100/100**
Files: 7 total, 1 source, 1 tests, 3 docs
Capabilities: 0; safety signals: 0
CI: 1 workflow — runs install, lint, type-check, test, build
Findings: 0

### Dimension scores
- docs: **100/100** (no findings)
- commands: **100/100** (no findings)
- ci: **100/100** (no findings)
- instructions: **100/100** (no findings)
- files: **100/100** (no findings)
- safety: **100/100** (no findings)

### Repository topology
Roots: 4; languages: 1; roots without local tests: 1; roots without local docs: 1
- \`__tests__\`: test, TypeScript, 0 source, 1 tests, 0 docs
- \`.\`: package, TypeScript, 0 source, 0 tests, 2 docs
- \`docs\`: docs, 0 source, 0 tests, 1 docs
- \`src\`: unknown, TypeScript, 1 source, 0 tests, 0 docs

### Documentation roles
- \`AGENTS.md\`: agent-instruction (high)
- \`docs/ARCHITECTURE.md\`: architecture (high)
- \`README.md\`: development (low), entrypoint (high)

### Design-state strengths
- **INFO** documentation-evidence: 3 document surface(s) have deterministic role evidence. Paths: \`AGENTS.md\`, \`README.md\`, \`docs/ARCHITECTURE.md\`.
- **INFO** verification-locality: 9 command or CI verification surface(s) were detected. Paths: \`.github/workflows/ci.yml\`, \`package.json\`.

### Design-state risks
- **INFO** verification-locality: 1 source root(s) have no path-local test evidence. Paths: \`src\`.

### Design-state ambiguities
- **INFO** documentation-evidence: 1 source root(s) have no path-local document role evidence. Paths: \`src\`.

### Findings
No findings."
`;

exports[`scan output snapshots good-repo sarif 1`] = `
"{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "AgentReady",
          "informationUri": "https://github.com/napetrov/agentready",
          "rules": []
        }
      },
      "results": []
    }
  ]
}"
`;
